Tue Dec  9 15:21:16 PST 1997 Raph Levien <raph@acm.org>

	* app/gimprc.c, app/commands.c: committed the preferences patch I
 	 posted to gimp-developer on 4 Nov 1997. This patch fixes some
 	 stability problems, as well as makes the preferences saving
 	 functionality more complete.
	
Tue Dec  9 00:52:15 EST 1997 Adrian Likins <adrian@gimp.org>

	* added illusion, papertile, colorify, and glasstile
	 plugins

	* updated despeckle, and math map

Mon Dec  8 21:59:03 PST 1997  Manish Singh <yosh@gimp.org>

	* updated CML_explorer

Mon Dec  8 16:30:29 EST 1997  Adrian Likins <adrian@gimp.org>

	* udpdate gqbist, warp, randomize, fuse, gfig plugins

	* removed gflare-tar.gz from the plugins dir

Mon Dec  8 11:43:17 EST 1997 Adrian Likins <adrian@gimp.org>

	* updated iwarp to latest version

	* added Sven Neumans patch for 32-bit color in gck

	* fixed gimp_tips.txt (the tip about the "add alpha")


Mon Dec  8 02:13:36 PST 1997  Manish Singh <yosh@gimp.org>

	* app/about_dialog.c: Added Nathan Summers patch to make it
	work better

	* app/menus.c: Added Michael Natterer's patch to save menu
        accelerators with chars that need to be escaped properly

	* app/undo.c: Added Andy Thomas's patch to check for a NULL
	active_tool in the undo (so it can work with plugins)

Sun Dec  7 17:05:32 PST 1997  Manish Singh <yosh@gimp.org>

	* added Sven Neumann's patch to the scale and resize dialogs for		ratio input fields (app/resize.h, app/resize.c)

	* added Raph Levien's patch for the transperancy blur problem
	(app/convolve.c, app/gimage.h, app/gimage.c, paint_core.h,
	paint_core.c, paint_funcs.h, paint_funcs.c)

Sun Dec  7 15:27:14 EST 1997  Adrian Likins <adrian@gimp.org>

	* fixed refract.c to look for megawidget.h in the proper place
	
	* fixed the makefile.am in plugins/script-fu/script to install
	the texture files too

	* added a check in channels_dialog.c to make the aspect ratio 
	really go away

	* fixed a minor error in the alien-glow-* scripts with an 